--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         .user img {
             border: 1px solid #ccc;
             width: 175px;
-            height: 175px;
-            object-fit: cover;
+            height: auto;
+            object-fit: contain;
             cursor: pointer;
         }
 
