--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta charset="UTF-8">
     <style>
         .background {
-            background-image: url('Imagenes/nnbj.png');
+            background-image: url('Imagenes/fondo.png');
             background-size: cover;
             min-height: 100vh;
             margin: 0;
             padding: 0;
+            background-repeat: no-repeat;
+            z-index: -1;
         }
 
         .users {
@@ -38,6 +40,11 @@
             text-align: center;
         }
 
+        h1 img {
+            width: 50%;
+            height: auto;
+        }
+
         .fullscreen {
             position: fixed;
             top: 0;
@@ -57,19 +64,64 @@
         }
 
         .jumping-images {
-            position: fixed;
-            bottom: 0;
+            position: absolute;
+            bottom: -650%;
             left: 0;
             width: 100%;
             display: flex;
             justify-content: space-around;
             animation: jump 2s infinite;
+            transition: position 0.5s ease;
         }
 
         .jumping-images img {
             width: 50px;
             height: 50px;
         }
+
+        .logo-container {
+            position: relative;
+            text-align: center;
+        }
+
+        .credits-cloud-container {
+            position: absolute;
+            top: 50%;
+            left: 10%;
+            transform: translate(-50%, -50%);
+            z-index: 0;
+        }
+
+        .credits-cloud-container img {
+            width: auto;
+            height: auto;
+            max-width: 25%;
+            max-height: 25%;
+        }
+
+        .credits-fullscreen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            overflow: auto;
+        }
+
+        .credits-content {
+            color: white;
+            font-size: 24px;
+            text-align: center;
+            padding: 20px;
+            max-height: 80%;
+            overflow-y: auto;
+        }
+
 
         @keyframes jump {
             0% {
@@ -84,93 +136,214 @@
                 transform: translateY(0);
             }
         }
+
+        .visible {
+            position: fixed;
+            bottom: 0;
+            top: auto;
+        }
     </style>
 </head>
 
 <body>
     <div class="background">
-        <h1><img src="Imagenes/360_F_568093836_1JFTq5IoByinAn4Qtj4RTHQfxvGgRYEn.jpg" alt="Feli pumple"></h1>
+        <div class="logo-container">
+            <div class="credits-cloud-container">
+                <img src="Imagenes/nube-creditos.png" alt="Creditos" onclick="showCredits()">
+            </div>
+            <h1><img src="Imagenes/FELIZ-CUMPLE-LOGO.png" alt="Feli pumple"></h1>
+        </div>        
+        
         <div class="users">
             <div class="user">
-                User
+                <img src="Imagenes/Nombres/Coralcita.png">
                 <br>
-                <img src="Imagenes/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                <img src="Imagenes/Cartas/Coralcita.jpg" alt="User Image" onclick="openFullscreen(this)">
             </div>
             <div class="user">
-                User
+                <img src="Imagenes/Nombres/Mika.png">
                 <br>
-                <img src="Imagenes/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                <img src="Imagenes/Cartas/Mika.png" alt="User Image" onclick="openFullscreen(this)">
             </div>
             <div class="user">
-                User
+                <img src="Imagenes/Nombres/Igochi.png">
                 <br>
-                <img src="Imagenes/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                <img src="Imagenes/Cartas/Igochi.png" alt="User Image" onclick="openFullscreen(this)">
             </div>
             <div class="user">
-                User
+                <img src="Imagenes/Nombres/Vicu-Aaroncio.png">
                 <br>
-                <img src="Imagenes/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                <img src="Imagenes/Cartas/Vicu-Aaroncio.png" alt="User Image" onclick="openFullscreen(this)">
             </div>
             <div class="user">
-                User
+                <img src="Imagenes/Nombres/Leggiex.png">
                 <br>
-                <img src="Imagenes/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                <img src="Imagenes/Cartas/Leggiex.png" alt="User Image" onclick="openFullscreen(this)">
             </div>
             <div class="user">
-                User
+                <img src="Imagenes/Nombres/birdhouzin.png">
                 <br>
-                <img src="Imagenes/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                <img src="Imagenes/Cartas/Birdhouzin.png" alt="User Image" onclick="openFullscreen(this)">
             </div>
             <div class="user">
-                User
+                <img src="Imagenes/Nombres/cabifax.png">
                 <br>
-                <img src="Imagenes/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                <img src="Imagenes/Cartas/cabifax.png" alt="User Image" onclick="openFullscreen(this)">
             </div>
             <div class="user">
-                User
+                <img src="Imagenes/Nombres/cuakerlo.png">
                 <br>
-                <img src="Imagenes/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                <img src="Imagenes/Cartas/cuakerlo.png" alt="User Image" onclick="openFullscreen(this)">
             </div>
             <div class="user">
-                User
+                <img src="Imagenes/Nombres/humita_00.png">
                 <br>
-                <img src="Imagenes/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                <img src="Imagenes/Cartas/Humitaconh.png" alt="User Image" onclick="openFullscreen(this)">
             </div>
             <div class="user">
-                User
+                <img src="Imagenes/Nombres/MrQueen__.png">
                 <br>
-                <img src="Imagenes/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                <img src="Imagenes/Cartas/Mrqueen.png" alt="User Image" onclick="openFullscreen(this)">
             </div>
             <div class="user">
-                User
+                <img src="Imagenes/Nombres/kwn_so.png">
                 <br>
-                <img src="Imagenes/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                <img src="Imagenes/Cartas/kwnso.png" alt="User Image" onclick="openFullscreen(this)">
             </div>
             <div class="user">
-                User
+                <img src="Imagenes/Nombres/gusano73.png">
                 <br>
-                <img src="Imagenes/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                <img src="Imagenes/Cartas/Gusano.png" alt="User Image" onclick="openFullscreen(this)">
             </div>
             <div class="user">
-                User
+                <img src="Imagenes/Nombres/LucaDucks.png">
                 <br>
-                <img src="Imagenes/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                <img src="Imagenes/Cartas/LucaPatos.png" alt="User Image" onclick="openFullscreen(this)">
             </div>
             <div class="user">
-                User
+                <img src="Imagenes/Nombres/niconumeritos.png">
                 <br>
-                <img src="Imagenes/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                <img src="Imagenes/Cartas/NicoNumeritos.png" alt="User Image" onclick="openFullscreen(this)">
             </div>
             <div class="user">
-                User
+                <img src="Imagenes/Nombres/odasaku_u.png">
                 <br>
-                <img src="Imagenes/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                <img src="Imagenes/Cartas/Odasakuu.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/louciell.png">
+                <br>
+                <img src="Imagenes/Cartas/LOUAlgo.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/MrShocc.png">
+                <br>
+                <img src="Imagenes/Cartas/MrShocc.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/merfasoo.png">
+                <br>
+                <img src="Imagenes/Cartas/merfasso.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/milkomchan.png">
+                <br>
+                <img src="Imagenes/Cartas/Milkochancho.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/Evilpolloidevuk.png">
+                <br>
+                <img src="Imagenes/Cartas/Pollomalo.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/Deivid420.png">
+                <br>
+                <img src="Imagenes/Cartas/deigamer.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/aylu7976.png">
+                <br>
+                <img src="Imagenes/Cartas/aylu.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/Perchitagamer.png">
+                <br>
+                <img src="Imagenes/Cartas/Percha.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/Gomikiio.png">
+                <br>
+                <img src="Imagenes/Cartas/Gomitas.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/Nogue_void.png">
+                <br>
+                <img src="Imagenes/Cartas/Nogue.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/Trashuvv.png">
+                <br>
+                <img src="Imagenes/Cartas/Basurauvv.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/Paolaxo14.png">
+                <br>
+                <img src="Imagenes/Cartas/Paolaxo.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/Vicu-Aaroncio.png">
+                <br>
+                <img src="Imagenes/Cartas/Vicu-Aaroncio2.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/Tozznier.png">
+                <br>
+                <img src="Imagenes/Cartas/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/Morius.png">
+                <br>
+                <img src="Imagenes/Cartas/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/hika_s2.png">
+                <br>
+                <img src="Imagenes/Cartas/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/pungamaster5.png">
+                <br>
+                <img src="Imagenes/Cartas/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+            </div>
+            <div class="user">
+                <img src="Imagenes/Nombres/ts_frantwo.png">
+                <br>
+                <img src="Imagenes/Cartas/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
             </div>
         </div>
     </div>
 
     <div class="fullscreen" id="fullscreenContainer" style="display: none;">
         <img id="fullscreenImage" src="" alt="Fullscreen Image">
+    </div>
+
+    <div class="credits-fullscreen" id="creditsFullscreen" style="display: none;">
+        <div class="credits-content">
+            <p>Este regalo fue organizado por:</p>
+            <p><a href="https://x.com/Cori_CatAstro" target="_blank">★Coralcita</a></p>
+            <p>★Mikaela_cow</p>
+            <p></p>
+            <p>Programador:</p>
+            <p><a href="https://neki.is-a.dev" target="_blank">★JustNeki</a></p>
+            <p></p>
+            <p>Arte:</p>
+            <p><a href="https://x.com/Inaniinii" target="_blank">★Inaniinii</a></p>
+            <p></p>
+            <p>Música:</p>
+            <p><a href="https://www.instagram.com/igoch1/" target="_blank">★Igochii</a></p>
+
+            <p>★Con ayuda del chat★</p>
+        </div>
     </div>
 
     <div class="jumping-images">
@@ -194,6 +367,25 @@
             const fullscreenContainer = document.getElementById('fullscreenContainer');
             if (event.target === fullscreenContainer) {
                 fullscreenContainer.style.display = 'none';
+            }
+        });
+
+        function showCredits() {
+            const creditsFullscreen = document.getElementById('creditsFullscreen');
+            creditsFullscreen.style.display = 'flex';
+        }
+
+        window.addEventListener('scroll', function () {
+            const jumpingImages = document.querySelector('.jumping-images');
+            const background = document.querySelector('.background');
+            const backgroundHeight = background.offsetHeight;
+            const scrollHeight = window.pageYOffset;
+
+            if (scrollHeight > backgroundHeight / 2)
+            {
+                jumpingImages.classList.add('visible');
+            } else {
+                jumpingImages.classList.remove('visible');
             }
         });
     </script>
