--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <style>
         html, body {
+            margin: 0;
+            padding: 0;
             position: relative;
             overflow-x: hidden;
         }
@@ -111,6 +113,8 @@
         }
 
         .repeating-webm {
+            margin-bottom: 0;
+            padding-bottom: 0;
             position: absolute;
             bottom: 0;
             left: 0;
