--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <img src="Imagenes/Cartas/Igochi.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/Vicu-Aaroncio.png">
+                    <img src="Imagenes/Nombres/Biku-Haroncio.png">
                     <br>
                     <img src="Imagenes/Cartas/Vicu-Aaroncio.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
@@ -374,19 +374,19 @@
                     <img src="Imagenes/Cartas/Paolaxo.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/Vicu-Aaroncio.png">
+                    <img src="Imagenes/Nombres/Vicu-Aaronsio.png">
                     <br>
                     <img src="Imagenes/Cartas/Vicu-Aaroncio2.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
                     <img src="Imagenes/Nombres/Tozznier.png">
                     <br>
-                    <img src="Imagenes/Cartas/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                    <img src="Imagenes/Cartas/Tozznier.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/Morius.png">
+                    <img src="Imagenes/Nombres/Huervacho.png">
                     <br>
-                    <img src="Imagenes/Cartas/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                    <img src="Imagenes/Cartas/Huervacho.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
                     <img src="Imagenes/Nombres/hika_s2.png">
@@ -394,14 +394,14 @@
                     <img src="Imagenes/Cartas/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/pungamaster5.png">
+                    <img src="Imagenes/Nombres/BrianJariel.png">
                     <br>
-                    <img src="Imagenes/Cartas/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                    <img src="Imagenes/Cartas/BrianJariel.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
                     <img src="Imagenes/Nombres/ts_frantwo.png">
                     <br>
-                    <img src="Imagenes/Cartas/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                    <img src="Imagenes/Cartas/ts_frantwo.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
             </div>
         </div>
@@ -433,7 +433,8 @@
         <div class="credits-content">
             <p>Este regalo fue organizado por:</p>
             <p><a href="https://x.com/Cori_CatAstro" target="_blank">★Coralcita</a></p>
-            <p><a href="https://www.instagram.com/ohwhoismikaa?igsh=MTVhazl6bGRlcDloMA==" target="_blank"></a>★Mikaela_cow</a></p>
+            <p></p>
+            <p><a href="https://www.instagram.com/ohwhoismikaa?igsh=MTVhazl6bGRlcDloMA==" target="_blank">★Mika_Cow</a></p>
             <p></p>
             <p>Programador:</p>
             <p><a href="https://neki.is-a.dev" target="_blank">★JustNeki</a></p>
