Added more baloons.

--- a/index.html
+++ b/index.html
@@ -190,22 +190,42 @@
         
         .balloon-top-left {
             left: 5%;
-            top: 10%;
+            top: 7%;
         }
 
         .balloon-top-right {
             right: -20%;
-            top: 10%;
+            top: 13%;
+        }
+
+        .balloon-mid-left {
+            left: 10%;
+            top: 25%;
+        }
+
+        .balloon-mid-right {
+            right: -15%;
+            top: 20%;
+        }
+
+        .balloon-mid2-left {
+            left: 10%;
+            top: 50%;
+        }
+
+        .balloon-mid2-right {
+            right: -15%;
+            top: 55%;
         }
 
         .balloon-bottom-left {
             left: 10%;
-            bottom: 10%;
+            top: 80%;
         }
 
         .balloon-bottom-right {
             right: -15%;
-            bottom: 10%;
+            top: 75%;
         }
 
         .wrapper {
@@ -416,13 +436,25 @@
         <img src="Imagenes/Globos/C1.png" alt="Balloon">
     </div>
     <div class="balloon balloon-right balloon-top-right">
-        <img src="Imagenes/Globos/M3.png" alt="Balloon">
+        <img src="Imagenes/Globos/M1.png" alt="Balloon">
     </div>
-    <div class="balloon balloon-left balloon-bottom-left">
+    <div class="balloon balloon-right balloon-mid-right">
+        <img src="Imagenes/Globos/C2.png" alt="Balloon">
+    </div>
+    <div class="balloon balloon-left balloon-mid-left">
         <img src="Imagenes/Globos/Y2.png" alt="Balloon">
     </div>
+    <div class="balloon balloon-right balloon-mid2-right">
+        <img src="Imagenes/Globos/C3.png" alt="Balloon">
+    </div>
+    <div class="balloon balloon-left balloon-mid2-left">
+        <img src="Imagenes/Globos/M2.png" alt="Balloon">
+    </div>
+    <div class="balloon balloon-left balloon-bottom-left">
+        <img src="Imagenes/Globos/Y3.png" alt="Balloon">
+    </div>
     <div class="balloon balloon-right balloon-bottom-right">
-        <img src="Imagenes/Globos/C2.png" alt="Balloon">
+        <img src="Imagenes/Globos/M3.png" alt="Balloon">
     </div>
 
     <div class="fullscreen" id="fullscreenContainer" style="display: none;">
