--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                 <div class="user">
                     <img src="Imagenes/Nombres/hika_s2.png">
                     <br>
-                    <img src="Imagenes/Cartas/PlaceHolder.png" alt="User Image" onclick="openFullscreen(this)">
+                    <img src="Imagenes/Cartas/Hika.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
                     <img src="Imagenes/Nombres/BrianJariel.png">
