--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Feliz Cumpleaños</title>
     <meta charset="UTF-8">
+    <link rel="icon" href="Imagenes/peepos/7.png" type="image/png">
     <style>
         html, body {
             margin: 0;
@@ -232,10 +233,62 @@
             position: relative;
             padding-bottom: 1000px;
         }
+
+        .close-button {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            background: transparent;
+            border: none;
+            font-size: 24px;
+            color: white;
+            cursor: pointer;
+        }
+
+        .close-button:hover {
+            color: #ccc;
+        }
+
+        .spotify-button {
+            position: absolute;
+            top: 20px;
+            right: 60px;
+            background-color: #1DB954;
+            border: none;
+            border-radius: 5px;
+            color: white;
+            font-size: 16px;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.3s;
+        }
+
+        .spotify-button:hover {
+            background-color: #1ed760;
+            transform: scale(1.05);
+        }
+
+        .spotify-button:active {
+            transform: scale(0.95);
+        }
+
+        .spotify-button img {
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+        }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
+    <audio id="birthdayAudio" autoplay>
+        <source src="FC_astro.mp3" type="audio/mpeg">
+        Tu navegador no soporta el elemento de audio, usa un navegador decente loco.
+    </audio>
     <div class="background">
         <div class="logo-container">
             <div class="credits-cloud-container">
@@ -463,6 +516,7 @@
 
     <div class="credits-fullscreen" id="creditsFullscreen" style="display: none;">
         <div class="credits-content">
+            <button onclick="hideCredits()" style="position: absolute; top: 20px; right: 20px; border: none; padding: 10px; cursor: pointer; font-size: 16px;">✖</button>
             <p>Este regalo fue organizado por:</p>
             <p><a href="https://x.com/Cori_CatAstro" target="_blank">★Coralcita</a></p>
             <p></p>
@@ -481,7 +535,29 @@
         </div>
     </div>
 
+    <a href="https://open.spotify.com/playlist/5jRz0MezceZY4s9mcXoZns?si=e7ZmHns-SuW-eo9eF6_Rkg&nd=1&dlsi=cb2b7933813644e8" target="_blank" class="spotify-button">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Spotify_icon.svg" alt="Spotify Logo">
+        Playlist
+    </a>
+
     <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const audio = document.getElementById('birthdayAudio');
+            audio.volume = 0.5;
+
+            setTimeout(() => {
+                audio.play().catch(error => {
+                    console.log('Autoplay failed:', error);
+                });
+            }, 1000);
+
+            document.addEventListener('click', function () {
+                audio.play().catch(error => {
+                    console.log('Play failed:', error);
+                });
+            });
+        });
+
         function openFullscreen(img) {
             const fullscreenContainer = document.getElementById('fullscreenContainer');
             const fullscreenImage = document.getElementById('fullscreenImage');
@@ -500,6 +576,11 @@
         function showCredits() {
             const creditsFullscreen = document.getElementById('creditsFullscreen');
             creditsFullscreen.style.display = 'flex';
+        }
+
+        function hideCredits() {
+            const creditsFullscreen = document.getElementById('creditsFullscreen');
+            creditsFullscreen.style.display = 'none';
         }
 
         window.addEventListener('scroll', function () {
