--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: rgba(0, 0, 0, 0.85);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -133,13 +133,24 @@
             overflow: auto;
         }
 
+
         .credits-content {
             color: white;
-            font-size: 24px;
+            font-size: 20px;
             text-align: center;
             padding: 20px;
             max-height: 80%;
             overflow-y: auto;
+            line-height: 1.6;
+        }
+
+        .credits-content a {
+            color: #b91da4;
+            text-decoration: none;
+        }
+
+        .credits-content a:hover {
+            text-decoration: underline;
         }
 
         .repeating-webm {
@@ -243,31 +254,34 @@
             font-size: 24px;
             color: white;
             cursor: pointer;
+            outline: none;
         }
 
         .close-button:hover {
             color: #ccc;
         }
 
+
         .spotify-button {
             position: absolute;
-            top: 20px;
-            right: 60px;
-            background-color: #1DB954;
+            top: 30px;
+            right: 20px;
+            background-color: transparent;
             border: none;
             border-radius: 5px;
             color: white;
             font-size: 16px;
-            padding: 10px 20px;
-            text-align: center;
+            padding: 10px 30px 10px 20px;
+            text-align: left;
             text-decoration: none;
-            display: inline-block;
+            display: flex;
+            align-items: center;
             cursor: pointer;
             transition: background-color 0.3s, transform 0.3s;
         }
 
         .spotify-button:hover {
-            background-color: #1ed760;
+            background-color: rgba(255, 255, 255, 0.2);
             transform: scale(1.05);
         }
 
@@ -279,16 +293,75 @@
             width: 20px;
             height: 20px;
             margin-right: 10px;
+            filter: invert(1)
+        }
+
+        .audio-player {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 10px;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
+
+        .audio-player button {
+            background-color: transparent;
+            border: none;
+            color: black;
+            font-size: 24px;
+            cursor: pointer;
+            outline: none;
+        }
+
+        .audio-player button:hover {
+            opacity: 0.7;
+        }
+
+        .audio-player input[type="range"] {
+            -webkit-appearance: none;
+            width: 100px;
+            height: 5px;
+            background: #fff;
+            outline: none;
+            opacity: 0.7;
+            transition: opacity .15s ease-in-out;
+        }
+
+        .audio-player input[type="range"]::-webkit-slider-runnable-track {
+            width: 100%;
+            height: 5px;
+            cursor: pointer;
+            background: #731db9;
+            border-radius: 1.3px;
+        }
+
+        .audio-player input[type="range"]::-webkit-slider-thumb {
+            height: 14px;
+            width: 14px;
+            border-radius: 50%;
+            background: #000000;
+            cursor: pointer;
+            -webkit-appearance: none;
+            margin-top: -5px;
+        }
+        .audio-player input[type="range"]:focus {
+            opacity: 1;
         }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
-    <audio id="birthdayAudio" autoplay>
+    <audio id="birthdayAudio">
         <source src="FC_astro.mp3" type="audio/mpeg">
         Tu navegador no soporta el elemento de audio, usa un navegador decente loco.
     </audio>
+
     <div class="background">
         <div class="logo-container">
             <div class="credits-cloud-container">
@@ -535,9 +608,15 @@
         </div>
     </div>
 
+    <div class="audio-player">
+        <button id="playPauseBtn" onclick="togglePlayPause()">
+            <i id="playPauseIcon" class="fas fa-play"></i>
+        </button>
+        <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="0.5" onchange="adjustVolume()">
+    </div>
     <a href="https://open.spotify.com/playlist/5jRz0MezceZY4s9mcXoZns?si=e7ZmHns-SuW-eo9eF6_Rkg&nd=1&dlsi=cb2b7933813644e8" target="_blank" class="spotify-button">
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Spotify_icon.svg" alt="Spotify Logo">
-        Playlist
+        También hay una Playlist!
     </a>
 
     <script>
@@ -545,17 +624,36 @@
             const audio = document.getElementById('birthdayAudio');
             audio.volume = 0.5;
 
-            setTimeout(() => {
-                audio.play().catch(error => {
-                    console.log('Autoplay failed:', error);
-                });
-            }, 1000);
-
-            document.addEventListener('click', function () {
+            function playAudio() {
                 audio.play().catch(error => {
                     console.log('Play failed:', error);
                 });
-            });
+            }
+
+            function pauseAudio() {
+                audio.pause();
+            }
+
+            function adjustVolume() {
+                audio.volume = document.getElementById('volumeSlider').value;
+            }
+
+            function togglePlayPause() {
+                if (audio.paused || audio.ended) {
+                    playAudio();
+                    document.getElementById('playPauseIcon').classList.remove('fa-play');
+                    document.getElementById('playPauseIcon').classList.add('fa-pause');
+                } else {
+                    pauseAudio();
+                    document.getElementById('playPauseIcon').classList.remove('fa-pause');
+                    document.getElementById('playPauseIcon').classList.add('fa-play');
+                }
+            }
+
+            playAudio();
+
+            document.getElementById('playPauseBtn').addEventListener('click', togglePlayPause);
+            document.getElementById('volumeSlider').addEventListener('input', adjustVolume);
         });
 
         function openFullscreen(img) {
