--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
     </div>
     <a href="https://open.spotify.com/playlist/5jRz0MezceZY4s9mcXoZns?si=e7ZmHns-SuW-eo9eF6_Rkg&nd=1&dlsi=cb2b7933813644e8" target="_blank" class="spotify-button">
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Spotify_icon.svg" alt="Spotify Logo">
-        También hay una Playlist!
+        Escuchá la playlist en Spotify!
     </a>
 
     <script>
