--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             overflow-x: hidden;
         }
 
+        body {
+            margin: 0;
+        }
+
         .background {
             background-image: url('Imagenes/fondo.png');
             background-size: cover;
@@ -65,11 +69,14 @@
         }
 
         .user img {
-            border: 1px solid #ccc;
             width: 175px;
             height: auto;
             object-fit: contain;
             cursor: pointer;
+        }
+
+        .user .unclickable {
+            pointer-events: none;
         }
 
         h1 {
@@ -349,17 +356,41 @@
             -webkit-appearance: none;
             margin-top: -5px;
         }
+
         .audio-player input[type="range"]:focus {
             opacity: 1;
         }
+
+        .page-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: white;
+            z-index: 10000;
+            animation: fadeOutOverlay 2.5s forwards;
+        }
+
+        @keyframes fadeOutOverlay {
+            from {
+                opacity: 1;
+            }
+            to {
+                opacity: 0;
+                visibility: hidden;
+            }
+        }
+
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
+    <div class="page-overlay"></div>
     <audio id="birthdayAudio">
         <source src="FC_astro.mp3" type="audio/mpeg">
-        Tu navegador no soporta el elemento de audio, usa un navegador decente loco.
+        Tu navegador no soporta el elemento de audio, usa un navegador decente, loco.
     </audio>
 
     <div class="background">
@@ -385,167 +416,167 @@
         <div class="wrapper">
             <div class="users">
                 <div class="user">
-                    <img src="Imagenes/Nombres/Coralcita.png">
+                    <img src="Imagenes/Nombres/Coralcita.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Coralcita.jpg" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/Mika.png">
+                    <img src="Imagenes/Nombres/Mika.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Mika.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/Igochi.png">
+                    <img src="Imagenes/Nombres/Igochi.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Igochi.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/Biku-Haroncio.png">
+                    <img src="Imagenes/Nombres/Biku-Haroncio.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Vicu-Aaroncio.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/Leggiex.png">
+                    <img src="Imagenes/Nombres/Leggiex.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Leggiex.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/birdhouzin.png">
+                    <img src="Imagenes/Nombres/birdhouzin.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Birdhouzin.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/cabifax.png">
+                    <img src="Imagenes/Nombres/cabifax.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/cabifax.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/cuakerlo.png">
+                    <img src="Imagenes/Nombres/cuakerlo.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/cuakerlo.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/humita_00.png">
+                    <img src="Imagenes/Nombres/humita_00.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Humitaconh.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/MrQueen__.png">
+                    <img src="Imagenes/Nombres/MrQueen__.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Mrqueen.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/kwn_so.png">
+                    <img src="Imagenes/Nombres/kwn_so.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/kwnso.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/gusano73.png">
+                    <img src="Imagenes/Nombres/gusano73.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Gusano.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/LucaDucks.png">
+                    <img src="Imagenes/Nombres/LucaDucks.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/LucaPatos.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/niconumeritos.png">
+                    <img src="Imagenes/Nombres/niconumeritos.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/NicoNumeritos.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/odasaku_u.png">
+                    <img src="Imagenes/Nombres/odasaku_u.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Odasakuu.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/louciell.png">
+                    <img src="Imagenes/Nombres/louciell.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/LOUAlgo.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/MrShocc.png">
+                    <img src="Imagenes/Nombres/MrShocc.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/MrShocc.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/merfasoo.png">
+                    <img src="Imagenes/Nombres/merfasoo.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/merfasso.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/milkomchan.png">
+                    <img src="Imagenes/Nombres/milkomchan.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Milkochancho.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/Evilpolloidevuk.png">
+                    <img src="Imagenes/Nombres/Evilpolloidevuk.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Pollomalo.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/Deivid420.png">
+                    <img src="Imagenes/Nombres/Deivid420.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/deigamer.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/aylu7976.png">
+                    <img src="Imagenes/Nombres/aylu7976.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/aylu.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/Perchitagamer.png">
+                    <img src="Imagenes/Nombres/Perchitagamer.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Percha.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/Gomikiio.png">
+                    <img src="Imagenes/Nombres/Gomikiio.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Gomitas.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/Nogue_void.png">
+                    <img src="Imagenes/Nombres/Nogue_void.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Nogue.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/Trashuvv.png">
+                    <img src="Imagenes/Nombres/Trashuvv.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Basurauvv.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/Paolaxo14.png">
+                    <img src="Imagenes/Nombres/Paolaxo14.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Paolaxo.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/Vicu-Aaronsio.png">
+                    <img src="Imagenes/Nombres/Vicu-Aaronsio.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Vicu-Aaroncio2.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/Tozznier.png">
+                    <img src="Imagenes/Nombres/Tozznier.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Tozznier.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/Huervacho.png">
+                    <img src="Imagenes/Nombres/Huervacho.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Huervacho.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/hika_s2.png">
+                    <img src="Imagenes/Nombres/hika_s2.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/Hika.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/BrianJariel.png">
+                    <img src="Imagenes/Nombres/BrianJariel.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/BrianJariel.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
                 <div class="user">
-                    <img src="Imagenes/Nombres/ts_frantwo.png">
+                    <img src="Imagenes/Nombres/ts_frantwo.png" class="unclickable">
                     <br>
                     <img src="Imagenes/Cartas/ts_frantwo.png" alt="User Image" onclick="openFullscreen(this)">
                 </div>
@@ -616,7 +647,7 @@
     </div>
     <a href="https://open.spotify.com/playlist/5jRz0MezceZY4s9mcXoZns?si=e7ZmHns-SuW-eo9eF6_Rkg&nd=1&dlsi=cb2b7933813644e8" target="_blank" class="spotify-button">
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Spotify_icon.svg" alt="Spotify Logo">
-        Escuchá la playlist en Spotify!
+        But if you look inside...
     </a>
 
     <script>
