--- a/index.html
+++ b/index.html
@@ -636,6 +636,9 @@
             <p><a href="https://www.instagram.com/igoch1/" target="_blank">★Igochii</a></p>
 
             <p>★Con ayuda del chat★</p>
+
+            
+            <p>© Santiago Fisela - 14/6/2024</p>
         </div>
     </div>
 
